# zoomy-foam

./: .gitignore  Model.H  Numerics.H  NumericsKernels.H  README.md  UpdateAuxVariables.H  UserFunctions.H  compile.sh  create_model.py  imex_kernel.H  init.H  numerics.H  numerics_o2.H  pyproject.toml  zoomyFoam.C
Make/: options
cases/: compile_sme.sh
cases/lake_at_rest_bump_1d/: run.py
cases/lake_at_rest_bump_malaga_1d/: run.py
cases/self_coupling/: couple_demo.py  model.py  plot.py  run.py
cases/sme0_sme1/: README.md  build_gif.py  build_gif_friction.py  generate.py  precice-config.xml  run.sh
cases/sme_self/: build_gif.py  compare_mono.py  compile.sh  generate.py  precice-config.xml  run.sh
cases/sme_vof/: README.md  compile.sh  generate.py  run.sh  run_triple.sh
cases/smooth_acoustic_convergence/: run.py
cases/stoker_convergence/: run.py
cases/swe2d_bump/: compare.py  compile.sh  generate.py  model.py  (+1 more)
chorin_app/: chorinFoam.C
precice/: PreciceManager.H
swePreciceCoupling/: swePreciceCoupling.C  swePreciceCoupling.H
tests/: conftest.py  foam_cases.py  foam_coupling.py  foam_models.py  foam_refs.py  test_capless_sme0_foam.py  test_coupling.py  test_coupling_sme_levels.py  test_mood_positivity.py  test_parallel_ranks.py  test_phase1_swe1d.py  test_phase1_swe2d.py  test_phase1_swe_bed_friction.py  test_phase2_numerics.py  test_run_case.py  test_run_case_2d.py  test_solvers.py  test_swashes_convergence.py  test_swe_2d.py  test_swe_ritter_dry.py  test_swe_stoker_wet.py  test_userfunctions_contract.py  test_vam_chorin.py  test_wb_lake_at_rest.py
tools/: compare_stoker.py  generate_headers.py  macdonald_friction_verification.py
zoomy_foam/: __init__.py  _constants.py  _pipeline.py  solvers.py
(+197 files in other folders)
