[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomy_foam"
version = "0.1.0"
description = "zoomy_foam is a module of Zoomy: the OpenFOAM (zoomyFoam) backend and its importable run entry."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [
  { name = "Ingo Steldermann", email = "steldermann@mbd.rwth-aachen.de" }
]
keywords = ["simulation", "shallow flow", "free surface flow", "shallow moments", "shallow water", "VAM", "OpenFOAM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
  "sympy>=1.12",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/mbd-rwth/Zoomy"
Documentation = "https://mbd-rwth.github.io/Zoomy"
Source = "https://github.com/mbd-rwth/Zoomy"
Issues = "https://github.com/mbd-rwth/Zoomy/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["zoomy_foam*"]

[tool.pytest.ini_options]
# Tier + area markers for the foam suite.  Default `pytest` runs the small gate;
# `-m regression` the reference marches; `large` additionally needs --run-large.
markers = [
  "small: gate tier — runs on every change (default pytest)",
  "regression: compares against blessed references in tests/refs",
  "large: slow regression; needs --run-large",
  "foam: backend/area tag (selection only)",
]
